--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>about me</title>
   <meta property="og:type" content="website">
   <meta property="og:title" content="about me">
+  <meta property="og:image" content="http://swgate.ru/source/black.2928ccde.png">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   <meta name="next-head-count" content="16">
