--- a/index.html
+++ b/index.html
@@ -50,7 +50,20 @@
           <img draggable="false" src="./source/black.2928ccde.png" width="64" height="64" class="rendering-pixelated pointer-events-auto">
           <span class="pointer-events-auto text-center bg-white">hobbies
           </span>
-        </a>        
+        </a>     
+
+        <a draggable="false" data-drag="true" data-index="3" class="absolute text-sm flex flex-col items-center justify-center pointer-events-none w-[90px]" style="top:50%;left:50%;-webkit-touch-callout:none" href="https://yandex.ru/">
+          <img draggable="false" src="./source/default.0302e2ab.png" width="64" height="64" class="rendering-pixelated pointer-events-auto">
+          <span class="pointer-events-auto text-center bg-white">life
+          </span>
+        </a>
+
+        <a draggable="false" data-drag="true" data-index="4" class="absolute text-sm flex flex-col items-center justify-center pointer-events-none w-[90px]" style="top:50%;left:50%;-webkit-touch-callout:none" href="https://yandex.ru/">
+          <img draggable="false" src="./source/default.0302e2ab.png" width="64" height="64" class="rendering-pixelated pointer-events-auto">
+          <span class="pointer-events-auto text-center bg-white">life2
+          </span>
+        </a>
+
       </div>
     </div>
   </div>
