--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   <meta name="next-head-count" content="16">
-  <link rel="preload" href="./source/2b6b45b1f64054f9.css" as="style">
-  <link rel="stylesheet" href="./source/2b6b45b1f64054f9.css" data-n-g="">
+  <link rel="preload" href="./source/css.css" as="style">
+  <link rel="stylesheet" href="./source/css.css" data-n-g="">
   <noscript data-n-css=""></noscript>
-  <script defer="" nomodule="" src="./source/polyfills-5cd94c89d3acac5f.js"></script>
-  <script src="./source/webpack-9b312e20a4e32339.js" defer=""></script>
-  <script src="./source/framework-5f4595e5518b5600.js" defer=""></script>
-  <script src="./source/main-04bdde0b0d3e5446.js" defer=""></script>
-  <script src="./source/_app-30d44e9f6482d855.js" defer=""></script>
-  <script src="./source/675-fca0467c7cfaa3b1.js" defer=""></script>
-  <script src="./source/113-03130541d3b0e3ac.js" defer=""></script>
-  <script src="./source/787-7e2dcc9b30018539.js" defer=""></script>
-  <script src="./source/index-0e426b236eba6baa.js" defer=""></script>
+  <script src="./source/webpack.js" defer=""></script>
+  <script src="./source/framework.js" defer=""></script>
+  <script src="./source/main.js" defer=""></script>
+  <script src="./source/_app.js" defer=""></script>
+  <script src="./source/675.js" defer=""></script>
+  <script src="./source/113.js" defer=""></script>
+  <script src="./source/787.js" defer=""></script>
+  <script src="./source/index.js" defer=""></script>
+  <script src="./source/tour.js" defer=""></script>
  </head>
 
 <body class="min-h-full flex flex-col text-sm">
@@ -52,13 +52,13 @@
           </span>
         </a>     
 
-        <a draggable="false" data-drag="true" data-index="3" class="absolute text-sm flex flex-col items-center justify-center pointer-events-none w-[90px]" style="top:50%;left:50%;-webkit-touch-callout:none" href="https://yandex.ru/">
-          <img draggable="false" src="./source/default.0302e2ab.png" width="64" height="64" class="rendering-pixelated pointer-events-auto">
+        <a draggable="false" data-drag="true" data-index="3" class="absolute text-sm flex flex-col items-center justify-center pointer-events-none w-[90px]" style="top:50%;left:50%;-webkit-touch-callout:none">
+          <img draggable="false" src="./source/mm.jpg" width="64" height="64" class="rendering-pixelated pointer-events-auto">
           <span class="pointer-events-auto text-center bg-white">life
           </span>
         </a>
 
-        <a draggable="false" data-drag="true" data-index="4" class="absolute text-sm flex flex-col items-center justify-center pointer-events-none w-[90px]" style="top:50%;left:50%;-webkit-touch-callout:none" href="https://yandex.ru/">
+        <a draggable="false" data-drag="true" data-index="4" class="absolute text-sm flex flex-col items-center justify-center pointer-events-none w-[90px]" style="top:50%;left:50%;-webkit-touch-callout:none" href="./tour">
           <img draggable="false" src="./source/default.0302e2ab.png" width="64" height="64" class="rendering-pixelated pointer-events-auto">
           <span class="pointer-events-auto text-center bg-white">life2
           </span>
