--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   <meta name="next-head-count" content="16">
+   
+  <link rel=”icon” href=”./source/favicon.ico” type=”image/x-icon”>
+  <link rel="apple-touch-icon" sizes="180x180" href="./source/favicon.ico">
+  <link rel="icon" type="image/x-icon" sizes="32x32" href="./source/favicon.ico">
+  <link rel="icon" type="image/x-icon" sizes="16x16" href="./source/favicon.ico">
+
   <link rel="preload" href="./source/css.css" as="style">
   <link rel="stylesheet" href="./source/css.css" data-n-g="">
   <noscript data-n-css=""></noscript>
