--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <title>about me</title>
   <meta property="og:type" content="website">
   <meta property="og:title" content="about me">
-  <meta property="og:image" content="http://swgate.ru/source/black.2928ccde.png">
+  <meta property="og:image" content="./source/favicon.ico">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   <meta name="next-head-count" content="16">
-   
-  <link rel=”icon” href=”./source/favicon.ico” type=”image/x-icon”>
+
   <link rel="apple-touch-icon" sizes="180x180" href="./source/favicon.ico">
+  <link rel=”icon” type=”image/x-icon” href=”./source/favicon.ico”>  
   <link rel="icon" type="image/x-icon" sizes="32x32" href="./source/favicon.ico">
-  <link rel="icon" type="image/x-icon" sizes="16x16" href="./source/favicon.ico">
+  <link rel="icon" type="image/x-icon" sizes="16x16" href="./source/favicon.ico">  
 
   <link rel="preload" href="./source/css.css" as="style">
   <link rel="stylesheet" href="./source/css.css" data-n-g="">
