--- a/index.html
+++ b/index.html
@@ -6,18 +6,15 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>about me</title>
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="about me">
-  <meta property="og:image" content="./source/favicon.ico">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="./source/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./source/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./source/favicon-16x16.png">
+  <link rel="manifest" href="./source/site.webmanifest">
+  <link rel="mask-icon" href="./source/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
-  <meta name="next-head-count" content="16">
-
-  <link rel="apple-touch-icon" sizes="180x180" href="./source/favicon.ico">
-  <link rel=”icon” type=”image/x-icon” href=”./source/favicon.ico”>  
-  <link rel="icon" type="image/x-icon" sizes="32x32" href="./source/favicon.ico">
-  <link rel="icon" type="image/x-icon" sizes="16x16" href="./source/favicon.ico">  
-
+  
   <link rel="preload" href="./source/css.css" as="style">
   <link rel="stylesheet" href="./source/css.css" data-n-g="">
   <noscript data-n-css=""></noscript>
@@ -40,25 +37,25 @@
     <div class="absolute inset-0 overflow-hidden select-none z-10">
       <div class="absolute top-0 left-0 bottom-[90px] right-[90px]">
         
-        <a draggable="false" data-drag="true" data-index="0" class="absolute text-sm flex flex-col items-center justify-center pointer-events-none w-[90px]" style="top:20%;left:30%;-webkit-touch-callout:none" href="https://yandex.ru/">
+        <a draggable="false" data-drag="true" data-index="0" class="absolute text-sm flex flex-col items-center justify-center pointer-events-none w-[90px]" style="top:20%;left:30%;-webkit-touch-callout:none" href="none">
           <img draggable="false" src="./source/default.0302e2ab.png" width="64" height="64" class="rendering-pixelated pointer-events-auto">
           <span class="pointer-events-auto text-center bg-white">family
           </span>
         </a>
 
-        <a draggable="false" data-drag="true" data-index="1" class="absolute text-sm flex flex-col items-center justify-center pointer-events-none w-[90px]" style="top:35%;left:70%;-webkit-touch-callout:none" href="https://swgate.ru/">
+        <a draggable="false" data-drag="true" data-index="1" class="absolute text-sm flex flex-col items-center justify-center pointer-events-none w-[90px]" style="top:35%;left:70%;-webkit-touch-callout:none" href="none">
           <img draggable="false" src="./source/gray.baac307f.png" width="64" height="64" class="rendering-pixelated pointer-events-auto">
           <span class="pointer-events-auto text-center bg-white">work
           </span>
         </a>
 
-        <a draggable="false" data-drag="true" data-index="2" class="absolute text-sm flex flex-col items-center justify-center pointer-events-none w-[90px]" style="top:75%;left:35%;-webkit-touch-callout:none" href="https://swgate.ru/">
+        <a draggable="false" data-drag="true" data-index="2" class="absolute text-sm flex flex-col items-center justify-center pointer-events-none w-[90px]" style="top:75%;left:35%;-webkit-touch-callout:none" href="none">
           <img draggable="false" src="./source/black.2928ccde.png" width="64" height="64" class="rendering-pixelated pointer-events-auto">
           <span class="pointer-events-auto text-center bg-white">hobbies
           </span>
         </a>     
 
-        <a draggable="false" data-drag="true" data-index="3" class="absolute text-sm flex flex-col items-center justify-center pointer-events-none w-[90px]" style="top:50%;left:50%;-webkit-touch-callout:none">
+        <a draggable="false" data-drag="true" data-index="3" class="absolute text-sm flex flex-col items-center justify-center pointer-events-none w-[90px]" style="top:50%;left:50%;-webkit-touch-callout:none" href="none">
           <img draggable="false" src="./source/mm.jpg" width="100" height="100" class="rendering-pixelated pointer-events-auto">
           <span class="pointer-events-auto text-center bg-white">life
           </span>
