--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>about me</title>
 
-  <link rel="apple-touch-icon" sizes="180x180" href="./source/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./source/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./source/favicon-16x16.png">
-  <link rel="manifest" href="./source/site.webmanifest">
-  <link rel="mask-icon" href="./source/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#d55b5b">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
-  
+    
   <link rel="preload" href="./source/css.css" as="style">
   <link rel="stylesheet" href="./source/css.css" data-n-g="">
   <noscript data-n-css=""></noscript>
@@ -51,7 +51,7 @@
 
         <a draggable="false" data-drag="true" data-index="2" class="absolute text-sm flex flex-col items-center justify-center pointer-events-none w-[90px]" style="top:75%;left:35%;-webkit-touch-callout:none" href="none">
           <img draggable="false" src="./source/black.2928ccde.png" width="64" height="64" class="rendering-pixelated pointer-events-auto">
-          <span class="pointer-events-auto text-center bg-white">hobbies
+          <span class="pointer-events-auto text-center bg-white">hobby
           </span>
         </a>     
 
